--- a/plugin.xml
+++ b/plugin.xml
@@ -25,6 +25,11 @@
                 <param name="onload" value="true" />
             </feature>
             <intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data android:mimeType="com.outsystemsenterprise.certissecuritydev.TestReadNfc/uri"/>
+            </intent-filter>
+            <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <data android:mimeType="text/plain" />
