--- a/plugin.xml
+++ b/plugin.xml
@@ -27,7 +27,7 @@
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
                 <category android:name="android.intent.category.DEFAULT"/>
-                <data android:mimeType="com.outsystemsenterprise.certissecuritydev.TestReadNfc/uri"/>
+                <data android:mimeType="com.outsystems.nfc/uri"/>
             </intent-filter>
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED" />
