--- a/plugin.xml
+++ b/plugin.xml
@@ -18,7 +18,13 @@
         <js-module src="www/phonegap-nfc.js" name="NFC">
             <runs />
         </js-module>
-
+        <config-file target="AndroidManifest.xml" parent="./application/activity">
+            <intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data android:mimeType="com.outsystems.nfc/uri"/>
+            </intent-filter>
+        </config-file>
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="NfcPlugin">
                 <param name="android-package" value="com.chariotsolutions.nfc.plugin.NfcPlugin"/>
@@ -26,13 +32,7 @@
             </feature>
 
         </config-file>
-        <config-file target="AndroidManifest.xml" parent="/*">
-            <intent-filter>
-                <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <data android:mimeType="com.outsystems.nfc/uri"/>
-            </intent-filter>
-        </config-file>
+
 
         <source-file src="src/android/src/com/chariotsolutions/nfc/plugin/NfcPlugin.java"
             target-dir="src/com/chariotsolutions/nfc/plugin"/>
