--- a/plugin.xml
+++ b/plugin.xml
@@ -18,14 +18,7 @@
         <js-module src="www/phonegap-nfc.js" name="NFC">
             <runs />
         </js-module>
-        <config-file target="AndroidManifest.xml" parent="./application/activity">
-            <intent-filter>
-                <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <data android:mimeType="com.outsystems.nfc/uri"/>
-            </intent-filter>
-        </config-file>
-        <config-file target="res/xml/config.xml" parent="/*">
+        <config-file target="res/xml/config.xml" parent="">
             <feature name="NfcPlugin">
                 <param name="android-package" value="com.chariotsolutions.nfc.plugin.NfcPlugin"/>
                 <param name="onload" value="true" />
@@ -42,8 +35,12 @@
         <config-file target="AndroidManifest.xml" parent="/manifest">
             <uses-permission android:name="android.permission.NFC"/>
             <uses-feature android:name="android.hardware.nfc" android:required="false"/>
+            <intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data android:mimeType="com.outsystems.nfc/uri"/>
+            </intent-filter>
         </config-file>
-
     </platform>
 
     <platform name="wp8">
