--- a/plugin.xml
+++ b/plugin.xml
@@ -25,8 +25,13 @@
             </feature>
 
         </config-file>
-
-
+        <config-file target="AndroidManifest.xml" parent="/manifest/application">
+             <intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data android:mimeType="com.outsystems.nfc/uri"/>
+            </intent-filter>
+        </config-file>
         <source-file src="src/android/src/com/chariotsolutions/nfc/plugin/NfcPlugin.java"
             target-dir="src/com/chariotsolutions/nfc/plugin"/>
         <source-file src="src/android/src/com/chariotsolutions/nfc/plugin/Util.java"
@@ -35,11 +40,7 @@
         <config-file target="AndroidManifest.xml" parent="/manifest">
             <uses-permission android:name="android.permission.NFC"/>
             <uses-feature android:name="android.hardware.nfc" android:required="false"/>
-            <intent-filter>
-                <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <data android:mimeType="com.outsystems.nfc/uri"/>
-            </intent-filter>
+
         </config-file>
     </platform>
 
