--- a/plugin.xml
+++ b/plugin.xml
@@ -18,20 +18,14 @@
         <js-module src="www/phonegap-nfc.js" name="NFC">
             <runs />
         </js-module>
-        <config-file target="res/xml/config.xml" parent="">
+
+        <config-file target="res/xml/config.xml" parent="/*">
             <feature name="NfcPlugin">
                 <param name="android-package" value="com.chariotsolutions.nfc.plugin.NfcPlugin"/>
                 <param name="onload" value="true" />
             </feature>
+        </config-file>
 
-        </config-file>
-        <config-file target="AndroidManifest.xml" parent="/manifest/application">
-             <intent-filter>
-                <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <data android:mimeType="com.outsystems.nfc/uri"/>
-            </intent-filter>
-        </config-file>
         <source-file src="src/android/src/com/chariotsolutions/nfc/plugin/NfcPlugin.java"
             target-dir="src/com/chariotsolutions/nfc/plugin"/>
         <source-file src="src/android/src/com/chariotsolutions/nfc/plugin/Util.java"
@@ -40,8 +34,16 @@
         <config-file target="AndroidManifest.xml" parent="/manifest">
             <uses-permission android:name="android.permission.NFC"/>
             <uses-feature android:name="android.hardware.nfc" android:required="false"/>
-
         </config-file>
+        
+        <config-file target="AndroidManifest.xml" parent="/manifest/application">
+            <intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data android:mimeType="com.outsystems.nfc/uri"/>
+            </intent-filter>
+        </config-file>
+
     </platform>
 
     <platform name="wp8">
