--- a/plugin.xml
+++ b/plugin.xml
@@ -27,16 +27,14 @@
             
         </config-file>
         
-        <config-file target="AndroidManifest.xml" parent="/*">
-            <intent-filter>
-                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <data android:mimeType="text/plain" />
-            </intent-filter>
-        </config-file>
         <config-file target="AndroidManifest.xml" parent="/manifest">
             <uses-permission android:name="android.permission.NFC"/>
             <uses-feature android:name="android.hardware.nfc" android:required="false"/>
+            <intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:mimeType="com.outsystems.nfc/uri" />
+            </intent-filter>
         </config-file>
         
         <source-file src="src/android/src/com/chariotsolutions/nfc/plugin/NfcPlugin.java"
