--- a/plugin.xml
+++ b/plugin.xml
@@ -33,11 +33,14 @@
         </config-file>
         
         <config-file target="AndroidManifest.xml" parent="/manifest">
-                  <intent-filter>
+            <activity android:name="com.outsystemsenterprise.certissecuritydev.TestBinaryMobile.MainActivity" android:label="MainActivity">
+                <intent-filter>
                     <action android:name="android.nfc.action.NDEF_DISCOVERED" />
                     <category android:name="android.intent.category.DEFAULT" />
                     <data android:mimeType="com.outsystems.nfc/uri" />
                 </intent-filter>
+            </activity>
+                  
         </config-file>
         
         
