--- a/plugin.xml
+++ b/plugin.xml
@@ -5,7 +5,7 @@
     id="phonegap-nfc"
     version="0.6.6">
 
-    <name>NFC</name> 
+    <name>NFC</name>
 
     <description>Near Field Communication (NFC) Plugin. Read and write NDEF messages to NFC tags and share NDEF messages with peers.</description>
 
@@ -24,31 +24,25 @@
                 <param name="android-package" value="com.chariotsolutions.nfc.plugin.NfcPlugin"/>
                 <param name="onload" value="true" />
             </feature>
-            
+
         </config-file>
-        
-        <config-file target="AndroidManifest.xml" parent="/manifest">
-            <uses-permission android:name="android.permission.NFC"/>
-            <uses-feature android:name="android.hardware.nfc" android:required="false"/>
+        <config-file target="AndroidManifest.xml" parent="/manifest/application/activity">
+            <intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data android:mimeType="com.outsystems.nfc/uri"/>
+            </intent-filter>
         </config-file>
-        
-        <config-file target="AndroidManifest.xml" parent="/manifest">
-            <activity android:name=".MainActivity" android:label="MainActivity">
-                <intent-filter>
-                    <action android:name="android.nfc.action.NDEF_DISCOVERED" />
-                    <category android:name="android.intent.category.DEFAULT" />
-                    <data android:mimeType="com.outsystems.nfc/uri" />
-                </intent-filter>
-            </activity>
-                  
-        </config-file>
-        
-        
+
         <source-file src="src/android/src/com/chariotsolutions/nfc/plugin/NfcPlugin.java"
             target-dir="src/com/chariotsolutions/nfc/plugin"/>
         <source-file src="src/android/src/com/chariotsolutions/nfc/plugin/Util.java"
             target-dir="src/com/chariotsolutions/nfc/plugin"/>
 
+        <config-file target="AndroidManifest.xml" parent="/manifest">
+            <uses-permission android:name="android.permission.NFC"/>
+            <uses-feature android:name="android.hardware.nfc" android:required="false"/>
+        </config-file>
 
     </platform>
 
