added android.hardware.nfc.hce flag

--- a/plugin.xml
+++ b/plugin.xml
@@ -42,6 +42,7 @@
         <config-file target="AndroidManifest.xml" parent="/manifest">
             <uses-permission android:name="android.permission.NFC"/>
             <uses-feature android:name="android.hardware.nfc" android:required="false"/>
+            <uses-feature android:name="android.hardware.nfc.hce" android:required="false"/>
         </config-file>
 
     </platform>
