--- a/plugin.xml
+++ b/plugin.xml
@@ -28,7 +28,7 @@
         </config-file>
         <config-file target="AndroidManifest.xml" parent="/manifest/application/activity">
             <intent-filter>
-                <action android:name="android.nfc.action.TECH_DISCOVERED"/>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
                 <category android:name="android.intent.category.DEFAULT"/>
                 <data android:mimeType="com.outsystems.nfc/uri" />
             </intent-filter>
