--- a/plugin.xml
+++ b/plugin.xml
@@ -28,9 +28,11 @@
         </config-file>
         <config-file target="AndroidManifest.xml" parent="/manifest/application/activity">
             <intent-filter>
-                <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
+                <action android:name="android.intent.action.NDEF_DISCOVERED"/>
                 <category android:name="android.intent.category.DEFAULT"/>
-                <data android:mimeType="com.outsystems.nfc/uri" />
+                <data android:scheme="com.outsystems.nfc"
+              android:host="/DeepLink/TestScreen"
+               />
             </intent-filter>
         </config-file>
 
