--- a/plugin.xml
+++ b/plugin.xml
@@ -30,11 +30,7 @@
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
                 <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
-                <data android:mimeType="com.outsystems.nfc/uri" 
-                    android:scheme="com.outsystems.nfc"
-                    android:host="/DeepLink/TestScreen"
-               />            
+                <data android:mimeType="com.outsystems.nfc/uri"/>
             </intent-filter>
         </config-file>
 
