--- a/plugin.xml
+++ b/plugin.xml
@@ -30,7 +30,7 @@
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
                 <category android:name="android.intent.category.DEFAULT"/>
-                <data android:mimeType="com.outsystems.nfc/uri"/>
+                <data android:scheme="com.outsystems.nfc"/>
             </intent-filter>
         </config-file>
 
